# ml

./: .aiexclude  .gitignore  Makefile  README.md  pipeline.yaml  pyproject.toml
.gemini/: context.md
.github/: copilot-instructions.md
config/: settings.default.toml  settings.dev.toml
containers/serve/: .gitkeep  requirements.txt  serve.py
containers/train-ner/: requirements.txt  train.py
containers/train-pytorch/: .gitkeep  requirements.txt  train.py
containers/train-xgboost/: .gitkeep  requirements.txt  train.py
docker/: batch-prediction.Dockerfile  etl.Dockerfile  graph-features.Dockerfile  pipeline-base.Dockerfile  serve.Dockerfile  train-ner.Dockerfile  train-pytorch.Dockerfile  train-xgboost.Dockerfile
docs/: README.md  deployment-runbook.md  monitoring.md
docs/bootcamp/: 01-data-flow-walkthrough.md  02-train-locally.md  03-submit-pipeline.md  04-evaluate-and-promote.md  05-deploy-to-serving.md  06-monitor-and-retrain.md  07-add-new-capability.md  08-graph-features.md  09-looker-dashboard.md  README.md
docs/design/: architecture.md  ml_infrastructure_tdd.md  monitoring.md
docs/runbooks/: ab_routing.md  batch_prediction.md  deployment.md  feature_store.md  model_deployment_phase3.md  retraining.md
docs/schema/: actor_features.md
notebooks/: .gitkeep
notebooks/evaluation/: classification_eval.ipynb  risk_scoring_baseline.ipynb
pipelines/: .gitkeep  training_pipeline.yaml
pipelines/configs/: classification_gemma2b.yaml  classification_xgboost.yaml  ner_bert.yaml  (+1 more)
scripts/: .gitkeep  bootstrap_dataset.py  build_image.sh  clean_cloud_run_history.sh  compare_frameworks.py  deploy_serving.py  e2e_smoke_test.py  redeploy_serving.py  run_baseline.py  run_batch_prediction.py  submit_pipeline.py  trigger_retraining.py
tests/: __init__.py
(+92 files in other folders)
